--- a/package.json
+++ b/package.json
@@ -6,7 +6,14 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "build-my-lib": "ng build --project my-lib",
+    "cypress:open:my-lib": "npx cypress open -C projects/my-lib/cypress.config.ts --env coverage=true",
+    "cypress:run:my-lib": "npm run build-my-lib && npm run instrument-my-lib && npx cypress run --component -C projects/my-lib/cypress.config.ts --env coverage=true",
+    "ngcc": "ngcc",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
+    "instrument-my-lib": "npx nyc instrument ./dist/my-lib --in-place"
   },
   "private": true,
   "dependencies": {
@@ -18,20 +25,30 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@cypress/code-coverage": "^3.12.36",
+    "@cypress/webpack-dev-server": "^3.8.0",
+    "mochawesome": "^7.1.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^17.3.5",
     "@angular/cli": "^17.3.5",
     "@angular/compiler-cli": "^17.3.0",
+    "@cypress/react": "^8.0.0",
+    "@cypress/webpack-preprocessor": "^6.0.1",
     "@types/jasmine": "~5.1.0",
+    "cypress": "^13.8.1",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.4.2"
+    "ng-packagr": "^17.3.0",
+    "typescript": "~5.4.2",
+    "webpack": "^5.91.0",
+    "webpack-dev-server": "^4.15.1"
   }
 }
